[project]
name = "testcase-creation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai-tools>=1.2.1",
    "crewai[anthropic,google-genai,openai]>=1.2.1",
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "tabulate>=0.9.0",
]
